tests/hep29_for_in_source_bad.hop
// Verifies HEP 29 for in source is rejected.
fn main() {
	var x i32 = 1
	for v in x {
		assert v == 1
	}
}
